fixed static css path

--- a/src/main/webapp/WEB-INF/th/fragments/form-elements.html
+++ b/src/main/webapp/WEB-INF/th/fragments/form-elements.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
     <title>Fragments page</title>
-    <link rel="stylesheet" href="../../style/app.css" th:href="@{/style/app.css}"/>
+    <link rel="stylesheet" href="../../../style/app.css" th:href="@{/style/app.css}"/>
 </head>
 
 <body>
