--- a/src/main/webapp/WEB-INF/th/fragments/form-elements.html
+++ b/src/main/webapp/WEB-INF/th/fragments/form-elements.html
@@ -10,10 +10,10 @@
 <body>
 
     <div layout:fragment="input-text">
-        <label class="control-label" th:text="${labelText}">Label</label>
+        <label class="control-label" th:text="${labelText}" th:for="${fieldName}">Label</label>
         <input type="text" th:field="*{__${fieldName}__}" />
         <span class="help-inline">
-            <p th:if="${#fields.hasErrors('__${fieldName}__')}" th:errors="*{__${fieldName}__}}">Error message</p>
+            <span th:if="${#fields.hasErrors('__${fieldName}__')}" th:errors="*{__${fieldName}__}}">Error message</span>
         </span>
     </div>
 
